Exercises/04-Ingress/ingress-tls.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: <my-ingress-name>
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
    cert-manager.io/issuer-kind: ClusterIssuer
spec:
  rules:
  - host: <first-name>.cluster.vendev.io
    http:
      paths:
      - backend:
          service:
            name: <my-service-name>
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - <first-name>.cluster.vendev.io
    secretName: my-app-tls
